# xsnap

./: .gitignore  LICENSE  Makefile  README.md  run.sh  setup.cfg  setup.py
debian/: changelog  control  copyright  rules
src/: __init__.py  __main__.py
src/xsnap/: main.py
src/xsnap/imageformats/: __init__.py
src/xsnap/imageformats/c64/: __init__.py  hires.py  multicolor.py  scrtypes.py  text.py
src/xsnap/imageformats/c64/formats/: __init__.py
src/xsnap/imageformats/c64/formats/hires/: __init__.py  aas.py  doo.py  hpc.py
src/xsnap/imageformats/c64/formats/multicolor/: __init__.py  a64.py  ami.py  art.py  che.py  drp.py  drz.py  gas.py  koa.py  vid.py  zom.py
src/xsnap/imageformats/c64/formats/rle/: __init__.py
src/xsnap/imageformats/c64/formats/text/: __init__.py  pdr.py  pet.py
src/xsnap/utils/: __init__.py  fileutils.py  logutils.py
src/xsnap/vice/: __init__.py  x64.py
src/xsnap/vice/vsf/: __init__.py  c64mem.py  cia2.py  generic.py  vic2.py
