[bdist_wheel]
universal = yes

[flake8]
max-line-length = 100

[metadata]
name = xsnap
version = attr: src.__version__
description = Create screenshot from emulator snapshot file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amnr/xsnap/
author = Amun
author_email = amun@local.host
license = NCSA
license_files = LICENSE
keywords = emulation, graphics, screenshot
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: University of Illinois/NCSA Open Source License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Games/Entertainment
    Topic :: Multimedia :: Graphics :: Capture :: Screen Capture
    Topic :: System :: Emulators

[mypy]
# mypy_path = src/
strict_optional = no

[options]
python_requires = >= 3.6

[pycodestyle]
max_doc_length = 100
max_line_length = 100
